# prompteval

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
examples/: sample_report.html
src/prompteval/: __init__.py  cli.py  config.py  evaluator.py
src/prompteval/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py
src/prompteval/report/: generator.py  template.html
src/prompteval/scoring/: __init__.py  cost.py  quality.py
src/prompteval/security/: __init__.py  injection.py  jailbreak.py  pii.py
src/prompteval/templates/: config.yaml  sample_dataset.yaml  sample_prompt.yaml
tests/: test_cli.py  test_config.py  test_cost.py  test_evaluator.py  test_injection.py  test_jailbreak.py  test_pii.py  test_report.py
